# market-data-pipeline

./: .gitignore  GX_INTERFACE_REQUIREMENTS.md  README.md  REQUIREMENTS.md  alembic.ini  main.py  market_data.db  pyproject.toml
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: c28c0cccd3d9_initial_migration.py
config/: logging_config.py
gx/: great_expectations.yml
gx/expectations/: .ge_store_backend_id  market_data_sqlite_clean_data_expectation_suite.json
gx/validation_definitions/: market_data_sqlite_clean_data_validation_definition.json
src/: market_data_api.py  models.py
src/core/: database.py  gx_facade.py
src/pipeline/: orchestrator.py
src/pipeline/extract/: extractor.py
src/pipeline/load/: loader.py
src/pipeline/transform/: transformer.py
tests/: test_database.py  test_extractor.py  test_loader.py  test_market_data_api.py  test_models.py  test_transformer.py
