[project]
name = "market-data-mock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.12.0",
    "asyncio-mqtt>=0.13.0",
    "azure-identity>=1.14.0",
    "azure-keyvault-secrets>=4.7.0",
    "azure-storage-blob>=12.0.0",
    "pandas>=2.0.0",
    "prefect>=3.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "sqlmodel>=0.0.8",
]

[dependency-groups]
dev = [
    "black>=23.0.0",
    "faker>=19.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
]
